modified:   src/views/Todos/index.jsx

--- a/src/views/Home/index.sass
+++ b/src/views/Home/index.sass
@@ -17,6 +17,8 @@
     &-main-right
         grid-column: 9 / 11
         grid-row: 2
+        @media screen and (max-width: 750px)
+            display: none
         &-category-subject
             font-size: 1.2rem
             margin: 0.8rem 0
