--- a/src/views/About/index.sass
+++ b/src/views/About/index.sass
@@ -11,7 +11,7 @@
             position: sticky
             top: 25vh
             >img
-                width: 50px
+                max-width: 50px
                 border-radius: 25px
             >div
                 font-size: 1.5rem
