--- a/src/views/Layout/index.sass
+++ b/src/views/Layout/index.sass
@@ -1,56 +1,62 @@
+@use '../../index.sass' as *
 .myapp-layout
-    min-height: 100vh
+    height: 100vh
+    display: grid
+    grid-template-rows: auto 1fr
     &-header
         box-sizing: border-box
         position: sticky
         top: 0
         z-index: 1
         background: linear-gradient(30deg, #ffffff 0 10%, #dddddd 20% 40%, #bbbbbb 50% 70%, #dddddd 80% 90%, #eeeeee 100%)
-        height: 6vh
+        //height: 6vh
         border-bottom: 1px solid gray
         display: flex
         align-items: center
         &-logo
-            flex: 2
+            flex: 2 0 3rem
             height: 100%
+            cursor: pointer
             background-image: url('../../img/logo.png')
             background-size: contain
             background-repeat: no-repeat
-            background-position: 10%
-        &-text
-            flex: 4
-            >span
-                font-style: italic
-                cursor: pointer
-            code:nth-child(1)
-                color: brown
-            code:nth-child(2)
-                color: green
-            code:nth-child(3)
-                color: blue
-            code:nth-child(4)
-                color: chocolate
+            background-position: 30%
         &-nav
-            flex: 8
+            flex: 8 1
             font-size: 1rem
             color: gray
-            >span
-                text-decoration: underline
-                margin: 0 1rem
-            &-link-active
-                font-weight: bold
+            &-dropdown
+                @media screen and (min-width: $breakpoint-small)
+                    display: none
+                color: blue
+                margin-left: 2rem
+                &-button
+                    font-size: 2rem
+                &-vertical
+                    >div
+                        text-decoration: underline
+                    &-active
+                        font-weight: bold
+            &-horizontal
+                @media screen and (max-width: $breakpoint-small)
+                    display: none
+                >span
+                    text-decoration: underline
+                    margin: 0 1rem
+                &-active
+                    font-weight: bold
         &-theme
-            flex: 2
+            flex: 1 0
             &-button
                 font-size: 1.5rem
                 cursor: pointer
         &-user
-            flex: 1.5
+            flex: 2 0 3rem
             margin: 0 1.5rem
             &-registered
                 font-size: 1.2rem
         &-sign
-            flex: 1.5
+            flex: 1 0 2rem
             >span
                 text-decoration: underline
                 color: royalblue
@@ -58,4 +64,3 @@
                 &:hover
                     font-weight: bold
     &-main
-        min-height: 94vh
