modified:   src/views/Home/index.jsx

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,5 +1,5 @@
-@import 'antd/dist/antd.css'
-$breakpoint-small: 850px
+@import '../node_modules/antd/dist/antd.css'
+$breakpoint-small: 800px
 body
     margin: 0
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
