--- a/src/views/Home/index.sass
+++ b/src/views/Home/index.sass
@@ -1,25 +1,24 @@
 @use '../../index.sass' as *
 .myapp-home
+    font-size: calc(0.5rem + 1vw)
     display: grid
-    grid-template-columns: repeat(10, 1fr)
-    grid-auto-rows: auto
+    grid-template-columns: 1fr minmax(60ch, 6fr) 2fr
     gap: 1.5rem
     &-main-center
-        grid-column: 2 / 9
-        grid-row: 2
-        min-height: calc(94vh - 1.5rem)// 1.5rem是gap
-        padding: 0 1.5rem
-        h1
-            color: inherit
-        p, li
-            font-size: large
+        grid-column: 2
+        & *
+            font-size: inherit
+        &-title
+            font-size: 1.5em
         &-time
+            font-size: 0.8em
             margin-bottom: 1rem
     &-main-right
-        grid-column: 9 / 11
-        grid-row: 2
+        @media screen and (min-width: $breakpoint-small)
+            grid-column: 3
         @media screen and (max-width: $breakpoint-small)
-            display: none
+            grid-column: 2
+            grid-row-start: -1
         &-category-subject
             font-size: 1.2rem
             margin: 0.8rem 0
