--- a/src/views/Layout/index.sass
+++ b/src/views/Layout/index.sass
@@ -9,8 +9,7 @@
         top: 0
         z-index: 1
         background: linear-gradient(30deg, #ffffff 0 10%, #dddddd 20% 40%, #bbbbbb 50% 70%, #dddddd 80% 90%, #eeeeee 100%)
-        //height: 6vh
-        border-bottom: 1px solid gray
+        border-bottom: 2px solid #dddddd
         display: flex
         align-items: center
         &-logo
@@ -24,17 +23,20 @@
         &-nav
             flex: 8 1
             font-size: 1rem
-            color: gray
             &-dropdown
                 @media screen and (min-width: $breakpoint-small)
                     display: none
-                color: blue
                 margin-left: 2rem
                 &-button
-                    font-size: 2rem
+                    color: royalblue
+                    font-size: 1.5rem
                 &-vertical
+                    position: absolute
+                    border-radius: 3px
+                    background-color: #dddddd
                     >div
                         text-decoration: underline
+                        padding: 0.4rem 0.4rem
                     &-active
                         font-weight: bold
             &-horizontal
@@ -52,7 +54,7 @@
                 cursor: pointer
         &-user
             flex: 2 0 3rem
-            margin: 0 1.5rem
+            text-align: center
             &-registered
                 font-size: 1.2rem
         &-sign
@@ -63,4 +65,3 @@
                 cursor: pointer
                 &:hover
                     font-weight: bold
-    &-main
