--- a/src/views/Home/index.sass
+++ b/src/views/Home/index.sass
@@ -12,7 +12,7 @@
             font-size: 1.5em
         &-time
             font-size: 0.8em
-            margin-bottom: 1rem
+            margin: 1rem 0
     &-main-right
         @media screen and (min-width: $breakpoint-small)
             grid-column: 3
