--- a/src/views/Layout/index.sass
+++ b/src/views/Layout/index.sass
@@ -14,12 +14,14 @@
         align-items: center
         &-logo
             flex: 2 0 3rem
-            height: 100%
+            //height: 100%
+            text-align: center
             cursor: pointer
-            background-image: url('../../img/logo.png')
-            background-size: contain
-            background-repeat: no-repeat
-            background-position: 30%
+            //width: 100
+            //background-image: url('../../img/logo.png')
+            //background-size: contain
+            //background-repeat: no-repeat
+            //background-position: 30%
         &-nav
             flex: 8 1
             font-size: 1rem
