--- a/src/views/Layout/index.sass
+++ b/src/views/Layout/index.sass
@@ -8,20 +8,14 @@
         position: sticky
         top: 0
         z-index: 1
-        background: linear-gradient(30deg, #ffffff 0 10%, #dddddd 20% 40%, #bbbbbb 50% 70%, #dddddd 80% 90%, #eeeeee 100%)
+        background-color: #dddddd
         border-bottom: 2px solid #dddddd
         display: flex
         align-items: center
         &-logo
-            flex: 2 0 3rem
-            //height: 100%
+            flex: 2 0
             text-align: center
             cursor: pointer
-            //width: 100
-            //background-image: url('../../img/logo.png')
-            //background-size: contain
-            //background-repeat: no-repeat
-            //background-position: 30%
         &-nav
             flex: 8 1
             font-size: 1rem
@@ -67,3 +61,5 @@
                 cursor: pointer
                 &:hover
                     font-weight: bold
+    &-main
+        padding-top: 1rem
