modified:   src/views/Home/index.sass

--- a/src/views/Home/index.sass
+++ b/src/views/Home/index.sass
@@ -5,7 +5,7 @@
     grid-template-columns: 1fr 6fr minmax(20ch, 2fr)
     gap: 1.5rem
     @media screen and (max-width: $breakpoint-small)
-        grid-template-columns: 1fr 1fr 1fr
+        grid-template-columns: auto 1fr auto
         gap: 0.5rem
     &-main-center
         grid-column: 2
