--- a/src/views/About/index.sass
+++ b/src/views/About/index.sass
@@ -1,40 +1,53 @@
 .myapp-about
-    display: grid
-    grid-template-columns: repeat(10, 1fr)
-    grid-auto-rows: auto
-    gap: 1.5rem
+    font-size: calc(0.5rem + 1vw)
+    display: flex
+    gap: 2rem
+    background-color: inherit
     &-main-left
-        grid-column: 1 / 3
-        grid-row: 2
+        flex: 1
         text-align: center
+        margin-left: 2rem
         &-resume
             position: sticky
-            top: 25vh
+            top: 20vh
+            font-size: 1.5rem
             >img
-                max-width: 50px
-                border-radius: 25px
-            >div
-                font-size: 1.5rem
-                >a
+                border-radius: 20px
+                margin-bottom: 2rem
+            &-github
+                margin-bottom: 1rem
+                a
                     color: inherit
-                @at-root .myapp-about-main-left-resume-wx
-                    font-size: 1rem
-                    color: white
-                    background-color: rgba(0, 0, 0, 0.800)
-                    height: 2rem
-                    line-height: 2rem
-                    padding: 0 4px
-                    margin: 0 4px
-                    border-radius: 4px
-                    position: absolute
+            &-wx
+                font-size: 1rem
+                color: white
+                background-color: rgba(0, 0, 0, 0.800)
+                line-height: 2
+                padding: 0 4px
+                margin: 0 4px
+                border-radius: 4px
+                position: absolute
     &-main-center
-        grid-column: 3 / 10
-        grid-row: 2
-        min-height: calc(94vh - 1.5rem)// 1.5rem是gap
-        padding: 0 1.5rem
+        flex: 5
+        margin-right: 2rem
+        background-color: inherit
         &-headline
             font-size: 1.2rem
-            border-bottom: 2px solid gray
+            text-align: center
+        hr
+            font-size: 1rem
+            border: none
+            color: inherit
+            background-color: inherit
+            overflow: visible
+            text-align: center
+            border-bottom: 3px double gray
+            height: 0.8rem
+            &::after
+                background-color: inherit
+                content: 'All done by myself'
+                padding: 0 3px
+                font-style: italic
         &-project
             display: flex
             flex-direction: column
@@ -43,18 +56,24 @@
             border-bottom: 1px solid gray
             &-title
                 font-size: 1.2rem
+                font-weight: 500
             &-subtitle
+                font-size: 0.8rem
                 display: flex
+                &-description
+                    font-style: italic
                 &-code
                     margin: 0 2rem
             &-content
                 margin-top: 0.3rem
                 &-libraries
-                    margin: 0.5rem 0
+                    font-size: 0.8em
+                    margin: 0.3rem 0
                     &-tag
+                        display: inline-block
                         border: 1px dashed gray
                         border-radius: 5px
-                        padding: 0.1rem 0.2rem
-                        margin-right: 0.5rem
+                        padding: 0.1rem 0.3rem
+                        margin: 0.2rem 0.5rem 0.2rem 0
                 &-more
-                    margin-top: 0.8rem
+                    margin-top: 0.5rem
