--- a/src/views/Layout/index.sass
+++ b/src/views/Layout/index.sass
@@ -25,7 +25,8 @@
                 margin-left: 2rem
                 &-button
                     color: royalblue
-                    font-size: 1.5rem
+                    font-size: 1.2rem
+                    text-decoration: underline
                 &-vertical
                     position: absolute
                     border-radius: 3px
@@ -46,7 +47,7 @@
         &-theme
             flex: 1 0
             &-button
-                font-size: 1.5rem
+                font-size: 1.2rem
                 cursor: pointer
         &-user
             flex: 2 0 3rem
@@ -56,6 +57,7 @@
         &-sign
             flex: 1 0 2rem
             >span
+                font-size: 1rem
                 text-decoration: underline
                 color: royalblue
                 cursor: pointer
