--- a/src/views/Tictactoe/index.sass
+++ b/src/views/Tictactoe/index.sass
@@ -1,36 +1,39 @@
-@use '../../index.sass' as *
 .myapp-tic
+    display: flex
+    flex-direction: column
+    gap: 2rem
     &-header
-        text-align: center
-        span
-            display: inline-block
-            font-size: 1.2rem
-            margin: 1.2rem 0
+        font-size: 1.2rem
+        align-self: center
     &-main
+        --width: 19rem
         display: flex
-        margin-top: 3rem
-        @media screen and (max-width: $breakpoint-small), screen and (orientation: portrait)
-            flex-direction: column
+        flex-wrap: wrap
+        gap: 5rem
+        justify-content: center
         &-left-container
-            flex: 1
-            margin-bottom: 4rem
+            border: 1px solid gray
+            width: var(--width)
             @at-root .myapp-tic-main-left
                 display: flex
                 flex-direction: column
-                align-items: center
-                &-radio
-                    margin-top: 2rem
+                &-item
+                    margin-bottom: 1rem
                     display: flex
-                    align-items: center
-                    &-text
-                        display: inline-block
-                        transform: translateX(1.2rem)//0.8 + 0.4
+                    flex-direction: column
+                    width: var(--width)
                     >span
+                        align-self: center
+                        margin-bottom: 0.5rem
                         font-size: 0.8rem
-                        width: 6rem
-                        text-align: center
+                    &-explain
+                        padding-left: 1.2rem
+                        >span
+                            text-decoration: underline
+                            cursor: pointer
+                        &-score
+                            //display: none
                     >div
-                        width: 18rem
                         >label
                             font-size: 1.2rem
                             margin: 0 0.8rem
@@ -49,25 +52,27 @@
                     @at-root .myapp-hidden
                         visibility: hidden
                 &-start
-                    margin-top: 3rem
+                    margin-top: 1rem
+                    align-self: center
                     button
-                        padding: 0.5rem
+                        padding: 0.2rem 0.5rem
                         font-size: 1rem
                         border-radius: 6px
                         border: 2px solid gray
                         box-shadow: 1px 1px black
                         &:hover
-                            background-color: rgba(143, 188, 143, 0.3)
-                        &:active
                             background-color: rgba(143, 188, 143, 0.5)
+                        &:active
+                            background-color: rgba(143, 188, 143, 0.8)
         &-center-container
-            flex: 1
+            border: 1px solid gray
+            width: var(--width)
             @at-root .myapp-tic-main-center
-                min-height: inherit
+                border: 1px solid gray
                 display: flex
                 flex-direction: column
-                align-items: center
                 justify-content: center
+                align-items: center
                 &-board
                     &-square
                         float: left
@@ -117,22 +122,18 @@
                         &-select
                             transform: translateY(-1rem)
         &-right-container
-            flex: 1
-            text-align: center
-            margin-top: 2rem
-            @media screen and (max-width: 1000px) and (min-width: 750px)
-                display: none
             @at-root .myapp-tic-main-right
                 display: flex
-                justify-content: center
+                flex-direction: column
+                align-items: center
+                margin: 0 auto
                 &-login
-                    text-decoration: underline
-                    cursor: pointer
+                    text-align: center
+                    >span
+                        text-decoration: underline
+                        cursor: pointer
                 &-score
-                    margin-right: 3rem
-                    width: 12rem
                     display: flex
-                    justify-content: space-around
                     font-size: 1.2rem
                     >div:nth-child(1)
                         div
@@ -142,18 +143,3 @@
                         div
                             margin-bottom: 1rem
                             text-align: left
-                &-explain
-                    th, td
-                        border: 1px dotted gray
-                        width: 4rem
-                    &-number
-                        text-align: left
-                        transform: translateX(1rem)
-                        &-clue
-                            text-decoration: underline
-                            cursor: pointer
-                    &-cheat
-                        font-size: 1.2rem
-                        >span
-                            font-size: 0.8rem
-                            display: inline-block
