modified:   src/views/Login/index.jsx

--- a/src/views/Todos/index.sass
+++ b/src/views/Todos/index.sass
@@ -1,14 +1,12 @@
 .myapp-todos-form-container
-    padding: 1.5rem 0
     position: sticky
-    top: 6vh
+    top: 34px
     z-index: 1
-    background-color: white
-    min-width: 70rem
+    background-color: inherit
     @at-root .myapp-todos-form
         display: flex
         align-items: baseline
-        height: 6vh
+        //height: 6vh
         &-element
             width: 3rem
             font-size: 2rem
@@ -35,6 +33,7 @@
                 width: 5rem
 .myapp-todos-table-container
     min-width: 70rem
+    //z-index: -10
 #myapp-todos-table
     &-header-cell
         font-size: 1.2rem
