--- a/src/index.sass
+++ b/src/index.sass
@@ -1,5 +1,7 @@
 @import '../node_modules/antd/dist/antd.css'
 $breakpoint-small: 800px
+$button-hover-bgcolor: rgba(143, 188, 143, 0.5)
+$button-active-bgcolor: rgba(143, 188, 143, 0.8)
 body
     margin: 0
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
