--- a/src/views/Login/index.sass
+++ b/src/views/Login/index.sass
@@ -1,5 +1,39 @@
+@use '../../index.sass' as *
 .myapp-login
-    padding: 3rem 0
-    button
-        padding: 0.2rem 1rem
-
+    display: flex
+    flex-direction: column
+    align-items: center
+    &-header
+        font-size: 1.2rem
+        margin: 1rem 0
+    &-form
+        &-item
+            display: flex
+            flex-direction: column
+            width: 10rem
+            margin: 1rem 0
+            >label
+                font-size: 1rem
+                margin-bottom: 0.3rem
+            &-input
+                height: 2.5rem
+                font-size: 1.5rem
+                background-color: inherit
+                &::placeholder
+                    font-size: 1rem
+                &:invalid
+                    outline: 2px solid red
+            &-input-confirm::placeholder
+                font-weight: bold
+        &-submit
+            text-align: center
+            margin-top: 2rem
+            >button
+                background-color: inherit
+                font-size: 1rem
+                font-weight: 600
+                padding: 0.2rem 0.8rem
+                &:hover
+                    background-color: $button-hover-bgcolor
+                &:active
+                    background-color: $button-active-bgcolor
