--- a/src/views/Tictactoe/index.sass
+++ b/src/views/Tictactoe/index.sass
@@ -9,137 +9,9 @@
         --width: 19rem
         display: flex
         flex-wrap: wrap
-        gap: 5rem
+        gap: 4rem
         justify-content: center
-        &-left-container
-            border: 1px solid gray
+        &-left
             width: var(--width)
-            @at-root .myapp-tic-main-left
-                display: flex
-                flex-direction: column
-                &-item
-                    margin-bottom: 1rem
-                    display: flex
-                    flex-direction: column
-                    width: var(--width)
-                    >span
-                        align-self: center
-                        margin-bottom: 0.5rem
-                        font-size: 0.8rem
-                    &-explain
-                        padding-left: 1.2rem
-                        >span
-                            text-decoration: underline
-                            cursor: pointer
-                        &-score
-                            //display: none
-                    >div
-                        >label
-                            font-size: 1.2rem
-                            margin: 0 0.8rem
-                            >input
-                                margin: 0 0.4rem
-                                -webkit-appearance: none
-                                -moz-appearance: none
-                                appearance: none
-                                width: 16px
-                                height: 16px
-                                border-radius: 50%
-                                border: 2px solid darkseagreen
-                                transition: 0.2s all linear
-                                &:checked
-                                    border: 8px solid seagreen
-                    @at-root .myapp-hidden
-                        visibility: hidden
-                &-start
-                    margin-top: 1rem
-                    align-self: center
-                    button
-                        padding: 0.2rem 0.5rem
-                        font-size: 1rem
-                        border-radius: 6px
-                        border: 2px solid gray
-                        box-shadow: 1px 1px black
-                        &:hover
-                            background-color: rgba(143, 188, 143, 0.5)
-                        &:active
-                            background-color: rgba(143, 188, 143, 0.8)
-        &-center-container
-            border: 1px solid gray
+        &-right
             width: var(--width)
-            @at-root .myapp-tic-main-center
-                border: 1px solid gray
-                display: flex
-                flex-direction: column
-                justify-content: center
-                align-items: center
-                &-board
-                    &-square
-                        float: left
-                        width: 6rem
-                        height: 6rem
-                        line-height: 6rem
-                        font-size: 4rem
-                        text-align: center
-                        margin-top: -2px
-                        margin-right: -2px
-                        padding: 0
-                        border: 2px solid black
-                        background-color: darkseagreen
-                        &-win
-                            @extend .myapp-tic-main-center-board-square
-                            background-color: goldenrod
-                        &-inactive
-                            @extend .myapp-tic-main-center-board-square
-                            border: 2px dotted black
-                            background-color: gray
-                    &-row::after
-                        content: ''
-                        clear: both
-                        display: table
-                &-history
-                    display: flex
-                    flex-direction: column
-                    align-items: center
-                    &-reset
-                        margin: 3rem 0
-                        font-size: 1rem
-                        border-radius: 6px
-                        border: 2px solid gray
-                        box-shadow: 1px 1px black
-                        &:hover
-                            background-color: rgba(143, 188, 143, 0.3)
-                        &:active
-                            background-color: rgba(143, 188, 143, 0.5)
-                    &-button
-                        font-size: 1.2rem
-                        border-radius: 4px
-                        border: 2px solid gray
-                        &-hidden
-                            visibility: hidden
-                        &-visible
-                            visibility: visible
-                        &-select
-                            transform: translateY(-1rem)
-        &-right-container
-            @at-root .myapp-tic-main-right
-                display: flex
-                flex-direction: column
-                align-items: center
-                margin: 0 auto
-                &-login
-                    text-align: center
-                    >span
-                        text-decoration: underline
-                        cursor: pointer
-                &-score
-                    display: flex
-                    font-size: 1.2rem
-                    >div:nth-child(1)
-                        div
-                            margin-bottom: 1rem
-                            text-align: right
-                    >div:nth-child(2)
-                        div
-                            margin-bottom: 1rem
-                            text-align: left
