--- a/src/index.sass
+++ b/src/index.sass
@@ -2,6 +2,18 @@
 $breakpoint-small: 800px
 $button-hover-bgcolor: rgba(143, 188, 143, 0.5)
 $button-active-bgcolor: rgba(143, 188, 143, 0.8)
+%button-style
+    font-size: 1rem
+    border-radius: 6px
+    border: 2px solid gray
+    box-shadow: 1px 1px black
+    &:hover
+        background-color: $button-hover-bgcolor
+    &:active
+        background-color: $button-active-bgcolor
+@font-face
+    font-family: 'myFont'
+    src: url('./font/AlexBrush-Regular.woff')
 body
     margin: 0
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
@@ -10,6 +22,8 @@ body
 code
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
     font-size: 1.2rem
+pre
+    font-family: 'myFont'
 .dark-theme
     color: #ffffff
     background-color: #333333
