--- a/src/views/Login/index.sass
+++ b/src/views/Login/index.sass
@@ -21,6 +21,8 @@
                 background-color: inherit
                 &::placeholder
                     font-size: 1rem
+                    position: relative
+                    top: -0.25rem
                 &:invalid
                     outline: 2px solid red
             &-input-confirm::placeholder
@@ -29,11 +31,6 @@
             text-align: center
             margin-top: 2rem
             >button
-                background-color: inherit
-                font-size: 1rem
                 font-weight: 600
                 padding: 0.2rem 0.8rem
-                &:hover
-                    background-color: $button-hover-bgcolor
-                &:active
-                    background-color: $button-active-bgcolor
+                @extend %button-style
