--- a/src/views/Tictactoe/GameBoard/GameHistory/index.sass
+++ b/src/views/Tictactoe/GameBoard/GameHistory/index.sass
@@ -5,14 +5,7 @@
     align-items: center
     &-reset
         margin: 3rem 0
-        font-size: 1rem
-        border-radius: 6px
-        border: 2px solid gray
-        box-shadow: 1px 1px black
-        &:hover
-            background-color: $button-hover-bgcolor
-        &:active
-            background-color: $button-active-bgcolor
+        @extend %button-style
     &-button
         font-size: 1.2rem
         border-radius: 4px
