new file:   .VSCodeCounter/2022-07-26_19-01-46/results.md

--- a/src/views/Home/index.sass
+++ b/src/views/Home/index.sass
@@ -9,15 +9,17 @@
         img
             width: 100%
     &-poem
-        color: #184ae1
+        color: royalblue
         font-size: 2rem
         position: relative
         top: -12rem
         text-align: center
         >pre
             margin: 0
+            font-family: 'AlexBrush'
         >span
-            font-size: 1rem
+            font-size: 0.8rem
+            font-style: italic
     &-navigation
         display: grid
         grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr))
