--- a/src/views/Todos/TodosForm/index.sass
+++ b/src/views/Todos/TodosForm/index.sass
@@ -38,6 +38,7 @@
                 width: calc(100% - var(--lable-width))
                 background-color: inherit
                 font-size: 1.2rem
+                line-height: 1.5
                 &::placeholder
                     font-size: 0.8rem
         &-rank
@@ -51,7 +52,6 @@
                 background-color: inherit
                 font-size: 1.2rem
                 &-option
-                    font-size: 1.5rem
                     background-color: white
         &-button
             grid-column: 3
