--- a/src/index.sass
+++ b/src/index.sass
@@ -12,7 +12,7 @@ $button-active-bgcolor: rgba(143, 188, 143, 0.8)
     &:active
         background-color: $button-active-bgcolor
 @font-face
-    font-family: 'myFont'
+    font-family: 'AlexBrush'
     src: url('./font/AlexBrush-Regular.woff')
 body
     margin: 0
@@ -22,8 +22,6 @@ body
 code
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
     font-size: 1.2rem
-pre
-    font-family: 'myFont'
 .dark-theme
     color: #ffffff
     background-color: #333333
