--- a/src/views/Login/index.sass
+++ b/src/views/Login/index.sass
@@ -16,13 +16,11 @@
                 font-size: 1rem
                 margin-bottom: 0.3rem
             &-input
-                height: 2.5rem
-                font-size: 1.5rem
+                font-size: 1.2rem
+                line-height: 2
                 background-color: inherit
                 &::placeholder
-                    font-size: 1rem
-                    position: relative
-                    top: -0.25rem
+                    font-size: 0.8rem
                 &:invalid
                     outline: 2px solid red
             &-input-confirm::placeholder
