--- a/src/views/Home/index.sass
+++ b/src/views/Home/index.sass
@@ -36,7 +36,7 @@
             color: royalblue
             border: 1px solid royalblue
             border-radius: 5px
-            background-color: #dddddd
+            background-color: #eeeeee
             padding: 0.2rem 0
             cursor: pointer
             &:hover
