--- a/src/index.sass
+++ b/src/index.sass
@@ -1,3 +1,4 @@
+@import 'antd/dist/antd.css'
 $breakpoint-small: 800px
 $button-hover-bgcolor: rgba(143, 188, 143, 0.5)
 $button-active-bgcolor: rgba(143, 188, 143, 0.8)
