modified:   src/index.sass

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,4 +1,4 @@
-@import 'antd/dist/antd.css'
+@import '../node_modules/antd/dist/antd.css'
 $breakpoint-small: 800px
 $button-hover-bgcolor: rgba(143, 188, 143, 0.5)
 $button-active-bgcolor: rgba(143, 188, 143, 0.8)
