modified:   src/App.jsx

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,4 +1,3 @@
-@import '../node_modules/antd/dist/antd.css'
 $breakpoint-small: 800px
 $button-hover-bgcolor: rgba(143, 188, 143, 0.5)
 $button-active-bgcolor: rgba(143, 188, 143, 0.8)
@@ -14,6 +13,7 @@ $button-active-bgcolor: rgba(143, 188, 143, 0.8)
 @font-face
     font-family: 'AlexBrush'
     src: url('./font/AlexBrush-Regular.woff')
+    font-display: fallback
 body
     margin: 0
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
