--- a/src/views/Home/index.sass
+++ b/src/views/Home/index.sass
@@ -1,8 +1,11 @@
 .myapp-home
     width: 100%
-    height: calc(100% - 34px)
-    position: absolute
-    top: 34px
+    //height: calc(100% - 34px)
+    height: 100%
+    //position: absolute
+    //top: 34px
+    position: relative
+    top: -1rem
     z-index: 5
     background-color: white
     &-picture
