--- a/src/views/Tictactoe/index.sass
+++ b/src/views/Tictactoe/index.sass
@@ -1,7 +1,7 @@
 .myapp-tic
     display: flex
     flex-direction: column
-    gap: 2rem
+    row-gap: 2rem
     &-header
         font-size: 1.2rem
         align-self: center
