--- a/src/views/Tictactoe/GameBoard/GameHistory/index.sass
+++ b/src/views/Tictactoe/GameBoard/GameHistory/index.sass
@@ -7,9 +7,13 @@
         margin: 3rem 0
         @extend %button-style
     &-button
-        font-size: 1.2rem
-        border-radius: 4px
-        border: 2px solid gray
+        width: 18rem
+        >button
+            box-sizing: border-box
+            width: 2rem
+            font-size: 1rem
+            border: 2px solid gray
+            border-radius: 4px
         &-hidden
             visibility: hidden
         &-visible
