modified:   src/views/Tictactoe/GameBoard/GameHistory/index.jsx

--- a/src/views/Tictactoe/GameBoard/GameHistory/index.sass
+++ b/src/views/Tictactoe/GameBoard/GameHistory/index.sass
@@ -6,12 +6,8 @@
     &-reset
         margin: 3rem 0
         @extend %button-style
-    &-button
-        width: 19rem
-        display: grid
-        grid-template-columns: repeat(auto-fit, minmax(2rem, 1fr))
+    &-step
         &-normal
-            font-size: 1.2rem
             border: 2px solid gray
             border-radius: 4px
         &-hidden
