--- a/src/views/Home/index.sass
+++ b/src/views/Home/index.sass
@@ -1,3 +1,7 @@
+@font-face
+    font-family: 'AlexBrush'
+    src: url('./AlexBrush-Regular.woff')
+    font-display: fallback
 .myapp-home
     width: 100%
     height: 100%
