modified:   src/views/Blog/FileContent/index.js

--- a/src/views/Blog/FileContent/index.sass
+++ b/src/views/Blog/FileContent/index.sass
@@ -1,6 +1,9 @@
 .myapp-comp-filecontent
+    & *
+        font-size: inherit
     &-title
         font-size: 1.5em
+        font-weight: 600
     &-time
         font-size: 0.8em
         margin: 0.5rem 0
