modified:   src/views/About/PersonalStatement/index.js

--- a/src/views/About/index.sass
+++ b/src/views/About/index.sass
@@ -1,3 +1,4 @@
+@use '../../index.sass'
 .myapp-about
     font-size: calc(0.5rem + 1vw)
     display: flex
@@ -32,7 +33,6 @@
             &-voiditem
                 @extend .myapp-about-main-center-tabs-item
                 border: none
-                transform: translate(-1px, 2px)
             &-voiditem-chosen
                 @extend .myapp-about-main-center-tabs-voiditem
                 border-left: 1px solid gray
