--- a/src/views/Layout/index.sass
+++ b/src/views/Layout/index.sass
@@ -1,5 +1,5 @@
 @use '../../index.sass' as *
-@import '../../../node_modules/antd/dist/antd.css'
+@use '../../../node_modules/antd/dist/antd.css'
 .myapp-layout
     $link-color: #40a9ff
     min-height: 100vh
