--- a/src/views/About/index.sass
+++ b/src/views/About/index.sass
@@ -20,7 +20,8 @@
                 border: 1px solid gray
                 border-bottom-width: 2px
                 border-top-left-radius: 10px
-                transform: translateY(2px)
+                position: relative
+                top: 2px
             &-item-chosen
                 @extend .myapp-about-main-center-tabs-item
                 border-right: none
@@ -32,19 +33,20 @@
                     border-bottom-color: #ffffff
             &-voiditem
                 @extend .myapp-about-main-center-tabs-item
+                left: -1px
                 border: none
+                border-top-left-radius: 0px
             &-voiditem-chosen
                 @extend .myapp-about-main-center-tabs-voiditem
                 border-left: 1px solid gray
                 border-bottom: 2px solid gray
                 border-bottom-left-radius: 10px
-                border-top-left-radius: 0
                 &-dark
                     @extend .myapp-about-main-center-tabs-voiditem-chosen
-                    box-shadow: -3px 3px #333333
+                    box-shadow: -4px 4px #333333
                 &-light
                     @extend .myapp-about-main-center-tabs-voiditem-chosen
-                    box-shadow: -3px 3px #ffffff
+                    box-shadow: -4px 4px #ffffff
         &-content
             border: 1px solid gray
             border-top-width: 2px
