new file:   "public/code/react\351\207\214\347\232\204KeepAlive.md"

--- a/src/views/About/index.sass
+++ b/src/views/About/index.sass
@@ -73,3 +73,5 @@
                         content: 'All done by myself'
                         padding: 0 3px
                         font-style: italic
+.invisible
+    display: none
