--- a/src/components/Tooltip/index.sass
+++ b/src/components/Tooltip/index.sass
@@ -1,6 +1,13 @@
 .tooltip
     position: fixed
-    color: white
-    //font-size: 1.2rem
-    border-radius: 4px
-    background-color: rgba(0, 0, 0, 0.800)
+    &-content
+        color: white
+        border-radius: 4px
+        //border-bottom-right-radius: 0
+        background-color: rgba(0, 0, 0, 0.8)
+    &-arrow
+        //width: 8px
+        //height: 8px
+        //background-color: rgba(222, 0, 0, 0.8)
+
+        background: linear-gradient(0.125turn, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 0) 50%, rgba(0, 0, 0, 0.8) 50%, rgba(0, 0, 0, 0.8) 100%)
