--- a/src/index.sass
+++ b/src/index.sass
@@ -18,6 +18,8 @@ body
 code
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
     font-size: 1.2rem
+h1,h2,h3,h4,h5,h6
+    color: inherit
 .dark-theme
     color: #ffffff
     background-color: #333333
