--- a/src/views/About/index.sass
+++ b/src/views/About/index.sass
@@ -14,6 +14,7 @@
         background-color: inherit
         &-tabs
             font-size: 1em
+            cursor: pointer
             &-item
                 display: inline-block
                 padding: 0.2rem 0.5rem
