--- a/src/views/Tictactoe/GameBoard/GameHistory/index.sass
+++ b/src/views/Tictactoe/GameBoard/GameHistory/index.sass
@@ -7,6 +7,8 @@
         margin: 3rem 0
         @extend %button-style
     &-step
+        &-text
+            text-align: center
         &-normal
             border: 2px solid gray
             border-radius: 4px
