--- a/src/views/Loading/index.sass
+++ b/src/views/Loading/index.sass
@@ -1,4 +1,7 @@
 .myapp-comp-loading
-    color: #888888
-    font-size: 2rem
-    margin: 0 auto
+    color: green
+    font-size: 4rem
+    position: fixed
+    top: 30vh
+    width: 100%
+    text-align: center
