--- a/src/views/Home/index.sass
+++ b/src/views/Home/index.sass
@@ -4,7 +4,8 @@
     font-display: fallback
 .myapp-home
     width: 100%
-    height: calc(100vh - 34px - 1rem - 1.5rem)//导航栏34px、偏移-1rem、备案栏1.5rem
+    height: 100%
+    // height: calc(100vh - 34px - 1rem - 1.5rem)//导航栏34px、偏移-1rem、备案栏1.5rem
     position: relative
     top: -1rem
     z-index: 5
