--- a/src/views/Home/index.sass
+++ b/src/views/Home/index.sass
@@ -4,8 +4,7 @@
     font-display: fallback
 .myapp-home
     width: 100%
-    height: 100%
-    // height: calc(100vh - 34px - 1rem - 1.5rem)//导航栏34px、偏移-1rem、备案栏1.5rem
+    height: calc(100vh - 34px - 1rem)//导航栏34px、偏移-1rem
     position: relative
     top: -1rem
     z-index: 5
@@ -46,3 +45,10 @@
             cursor: pointer
             &:hover
                 color: blue
+    &-footer
+        text-align: center
+        font-size: 0.8rem
+        height: 1.5rem
+        line-height: 1.5rem
+        a
+          color: gray
