--- a/src/views/Blog/FileContent/index.sass
+++ b/src/views/Blog/FileContent/index.sass
@@ -1,6 +1,8 @@
 .myapp-comp-filecontent
     & *
         font-size: inherit
+    &-prompt
+      font-size: 0.8rem
     &-title
         font-size: 1.5em
         font-weight: 600
