--- a/src/views/About/ProjectList/index.sass
+++ b/src/views/About/ProjectList/index.sass
@@ -1,4 +1,6 @@
 .myapp-comp-project
+    scroll-margin: 6rem
+    scroll-snap-align: start
     display: flex
     flex-direction: column
     margin: 1.5rem 0
@@ -26,4 +28,5 @@
                 padding: 0.1rem 0.3rem
                 margin: 0.2rem 0.8rem 0.2rem 0
         &-more
+            font-size: 1rem
             margin-top: 0.5rem
