--- a/src/views/About/Resume/index.sass
+++ b/src/views/About/Resume/index.sass
@@ -1,10 +1,14 @@
 .myapp-comp-resume
-    position: sticky
-    top: 20vh
-    margin: 0 auto
-    text-align: center
-    font-size: 1.5rem
+    position: relative
+    top: calc(100% - 250px)
     width: 80px
+    height: 250px
+    margin: 0 auto
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    font-size: 1.5rem
     >img
         max-width: 100%
         border-radius: 20px
