--- a/src/views/Layout/index.sass
+++ b/src/views/Layout/index.sass
@@ -13,6 +13,8 @@
         border-bottom: 2px solid #dddddd
         display: flex
         align-items: center
+        box-sizing: border-box
+        height: 2rem
         &-logo
             flex: 2 0
             text-align: center
