--- a/src/views/About/PersonalStatement/index.sass
+++ b/src/views/About/PersonalStatement/index.sass
@@ -7,14 +7,15 @@
 
   &-content
     font-size: 1.2rem
+    line-height: 2
     h3
       font-style: italic
       &:after
         content: "："
     h4
       font-weight: bold
-    span
-      font-weight: bold
+    ul>li
+      font-size: 1rem
 
   &-labels
     font-size: 0.8rem
