--- a/src/views/About/PersonalStatement/index.sass
+++ b/src/views/About/PersonalStatement/index.sass
@@ -6,7 +6,7 @@
   display: flex
 
   &-content
-    font-size: 1.2rem
+    font-size: 1.1em
     line-height: 2
     h3
       font-style: italic
@@ -15,6 +15,8 @@
     h4
       font-weight: bold
     ul>li
+      font-size: 0.8rem
+    a
       font-size: 1rem
 
   &-labels
